--- a/distributions/teamcity/build.gradle
+++ b/distributions/teamcity/build.gradle
@@ -26,13 +26,19 @@ if (project.hasProperty('inheritedDistPath'))
     project.logger.info("inheriting from distribution ${inheritedDistPath}")
     project.evaluationDependsOn(inheritedDistPath)
     Distribution.inheritDependencies(project, inheritedDistPath)
-    String dumbsterModulePath;
-    if (project.findProject(":server:modules:dumbster") != null)
-        dumbsterModulePath = ":server:modules:dumbster"
-    else
-        dumbsterModulePath = "${BuildUtils.getTestProjectPath(project.gradle)}:modules:dumbster"
-    BuildUtils.addModuleDistributionDependencies(project, [dumbsterModulePath,
-                                                           "${BuildUtils.getTestProjectPath(project.gradle)}:modules:simpletest"])
+
+    String testModulesPath = "${BuildUtils.getTestProjectPath(project.gradle)}:modules"
+    String dumbsterModule = "${testModulesPath}:dumbster"
+    String simpletestModule = "${testModulesPath}:simpletest"
+    List<String> testModules = [dumbsterModule, simpletestModule]
+    if (project.hasProperty("inheritedDistIncludeAllTestModules"))
+    {
+        project.findProject(testModulesPath).subprojects {
+            Project testModule -> testModules.add(testModule.path)
+        }
+    }
+    BuildUtils.addModuleDistributionDependencies(project, testModules)
+
     def split = inheritedDistPath.split(":")
     String inheritedDistName = split[split.length - 1]
     tasks.distribution.subDirName = "test/" + inheritedDistName
