--- a/distributions/teamcity/build.gradle
+++ b/distributions/teamcity/build.gradle
@@ -32,6 +32,7 @@ if (project.hasProperty('inheritedDistPath'))
     else
         dumbsterModulePath = "${BuildUtils.getTestProjectPath(project.gradle)}:modules:dumbster"
     BuildUtils.addModuleDistributionDependencies(project, [dumbsterModulePath,
+                                                           BuildUtils.getPlatformModuleProjectPath(project.gradle, "devtools"),
                                                            "${BuildUtils.getTestProjectPath(project.gradle)}:modules:simpletest"])
     def split = inheritedDistPath.split(":")
     String inheritedDistName = split[split.length - 1]
