--- a/build.gradle
+++ b/build.gradle
@@ -43,3 +43,9 @@ if (project.hasProperty("teamcity"))
 {
     apply plugin: 'org.labkey.teamCity'
 }
+
+// Add dependency on jar task so ant.iajc in the compileUiTestJava task can have the remote api jar.
+// Because of the move from (java to java-library plugin), Jar files are not recreated with the compileJava task.
+compileUiTestJava {
+    dependsOn ':remoteapi:java:jar'
+}
