Adding IgnoreModules to test properties. Should allow tests to run against branches missing things like dumpster.

--- a/test.properties
+++ b/test.properties
@@ -33,3 +33,4 @@ use.cloud.pipeline=false
 cloud.pipeline.bucket=
 webtest.webdriver.logging=false
 webtest.webdriver.headless=false
+webtest.ignoreMissingModules=false
