--- a/data/qc/build.gradle
+++ b/data/qc/build.gradle
@@ -4,7 +4,7 @@ import org.labkey.gradle.util.BuildUtils;
 apply plugin: 'java'
 
 dependencies {
-  BuildUtils.addLabKeyDependency(project: project, config: "compile", depProjectPath: BuildUtils.getRemoteApiProjectPath(gradle))
+  BuildUtils.addLabKeyDependency(project: project, config: "implementation", depProjectPath: BuildUtils.getRemoteApiProjectPath(gradle))
 }
 
 sourceSets {
@@ -22,7 +22,7 @@ project.task('validatorJar',
         {
             from sourceSets.main.output
             from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
-            duplicatesStrategy = 'exclude'
+            duplicatesStrategy = DuplicatesStrategy.EXCLUDE
             archiveFileName.set("validator.jar")
             destinationDirectory = project.projectDir
             manifest {
