add support for setting experimental feature flags during test run

--- a/test.properties
+++ b/test.properties
@@ -34,3 +34,6 @@ cloud.pipeline.bucket=
 webtest.webdriver.logging=false
 webtest.webdriver.headless=false
 webtest.ignoreMissingModules=false
+
+# Enable/Disable experimental features
+#experimental.legacy-lineage=false
