Add new property to 'test.properties'

--- a/test.properties
+++ b/test.properties
@@ -34,6 +34,7 @@ cloud.pipeline.bucket=
 webtest.webdriver.logging=false
 webtest.webdriver.headless=false
 webtest.ignoreMissingModules=false
+webtest.debug.server.packages=
 
 # Enable/Disable experimental features
 #experimental.legacy-lineage=false
