--- a/build.gradle
+++ b/build.gradle
@@ -22,12 +22,20 @@ project.dependencies {
     implementation "org.bouncycastle:bcpg-jdk15on:${bouncycastleVersion}"
     implementation "org.jetbrains:annotations:${annotationsVersion}"
     implementation "org.mock-server:mockserver-netty:${mockserverVersion}"
-    
-    // LabKey XML schemas are used to decode exported folder XMLs and test case XMLs
-    // Don't include local version so that running tests doesn't require building :server:api
-    implementation ("org.labkey:api:${labkeySchemasTestVersion}:schemas") { transitive = false }
 
-    // 36184: Tests can't find selenium-ie-driver library when running on Windows on TeamCity
+    if (project.hasProperty("teamcity"))
+    {
+        // LabKey XML schemas are used to decode exported folder XMLs and test case XMLs
+        // Don't include local version so that running tests doesn't require building API module
+        implementation("org.labkey.api:api:${labkeySchemasTestVersion}") { transitive = false }
+    }
+    else
+    {
+        // Use local version outside of TeamCity so as to not confuse IntelliJ
+        implementation(project(BuildUtils.getApiProjectPath(project.gradle))) { transitive = false }
+    }
+
+    // Issue 36184: Tests can't find selenium-ie-driver library when running on Windows on TeamCity
     // Workaround to ensure that the class-loader finds InternetExplorerDriver
     implementation "org.seleniumhq.selenium:selenium-ie-driver:${seleniumVersion}"
 }
