--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ project.dependencies {
     implementation "org.jetbrains:annotations:${annotationsVersion}"
     implementation "org.mock-server:mockserver-netty:${mockserverVersion}"
 
-    if (project.hasProperty("teamcity") || project.findProject(BuildUtils.getApiProjectPath(project.gradle) == null)
+    if (project.hasProperty("teamcity") || project.findProject(BuildUtils.getApiProjectPath(project.gradle)) == null)
     {
         // LabKey XML schemas are used to decode exported folder XMLs and test case XMLs
         // Don't include local version so that running tests doesn't require building API module
