--- a/build.gradle
+++ b/build.gradle
@@ -32,12 +32,17 @@ project.dependencies {
     else
     {
         // Use local version outside of TeamCity so as to not confuse IntelliJ
-        implementation(project(BuildUtils.getApiProjectPath(project.gradle))) { transitive = false }
+        BuildUtils.addLabKeyDependency(project: project, config: "implementation", depProjectPath: BuildUtils.getApiProjectPath(project.gradle), transitive: false)
     }
 
     // Issue 36184: Tests can't find selenium-ie-driver library when running on Windows on TeamCity
     // Workaround to ensure that the class-loader finds InternetExplorerDriver
     implementation "org.seleniumhq.selenium:selenium-ie-driver:${seleniumVersion}"
+}
+
+if (project.findProject(BuildUtils.getApiProjectPath(project.gradle)) != null)
+{
+    project.evaluationDependsOn(BuildUtils.getApiProjectPath(project.gradle))
 }
 
 BuildUtils.addLabKeyDependency(
