--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ project.dependencies {
     else
     {
         // Use local version outside of TeamCity so as to not confuse IntelliJ
-        implementation(project(BuildUtils.getApiProjectPath(project.gradle))) { transitive = false }
+        BuildUtils.addLabKeyDependency(project: project, config: "implementation", depProjectPath: BuildUtils.getApiProjectPath(project.gradle), transitive: false)
     }
 
     // Issue 36184: Tests can't find selenium-ie-driver library when running on Windows on TeamCity
