--- a/data/qc/build.gradle
+++ b/data/qc/build.gradle
@@ -4,7 +4,7 @@ import org.labkey.gradle.util.BuildUtils;
 apply plugin: 'java'
 
 dependencies {
-  BuildUtils.addLabKeyDependency(project: project, config: "implementation", depProjectPath: BuildUtils.getRemoteApiProjectPath(gradle))
+  BuildUtils.addLabKeyDependency(project: project, config: "implementation", depProjectPath: BuildUtils.getRemoteApiProjectPath(gradle), depVersion: project.labkeyClientApiVersion)
 }
 
 sourceSets {
