--- a/.gitattributes
+++ b/.gitattributes
@@ -45,3 +45,6 @@
 *.tar           binary
 *.war           binary
 *.zip           binary
+
+# The xarfiles dir shouldn't have it's eol changed
+**/data/xarfiles/**     -text
