--- a/gradle.properties
+++ b/gradle.properties
@@ -5,3 +5,6 @@ seleniumVersion=3.141.59
 reflectionsVersion=0.9.10
 mockserverVersion=5.5.1
 labkeySchemasTestVersion=20.3.2
+
+#Temporarily override root property
+labkeyClientApiVersion=1.3.1-csrf-SNAPSHOT
