Add parameter to indicate test modules aren't installed

--- a/test.properties
+++ b/test.properties
@@ -35,6 +35,7 @@ webtest.webdriver.logging=false
 webtest.webdriver.headless=false
 webtest.ignoreMissingModules=false
 webtest.debug.server.packages=
+webtest.without.test.modules=
 webtest.primary.app.admin=
 
 # Enable/Disable experimental features
