--- a/gradle.properties
+++ b/gradle.properties
@@ -7,4 +7,4 @@ mockserverVersion=5.5.1
 labkeySchemasTestVersion=20.3.2
 
 #Temporarily override root property
-labkeyClientApiVersion=1.3.1-csrf-SNAPSHOT
+labkeyClientApiVersion=1.3.1-SNAPSHOT
