--- a/test.properties
+++ b/test.properties
@@ -35,6 +35,8 @@ webtest.webdriver.logging=false
 webtest.webdriver.headless=false
 webtest.ignoreMissingModules=false
 webtest.debug.server.packages=
+webtest.without.test.modules=
+webtest.primary.app.admin=
 
 # Enable/Disable experimental features
 #experimental.legacy-lineage=false
