Use parameter name that Gradle will pass to tests

--- a/test.properties
+++ b/test.properties
@@ -39,4 +39,4 @@ webtest.without.test.modules=
 webtest.primary.app.admin=
 
 # Enable/Disable experimental features
-#experimental.legacy-lineage=false
+#webtest.experimental.legacy-lineage=false
