Revert accidental commit

--- a/test.properties
+++ b/test.properties
@@ -37,7 +37,7 @@ webtest.ignoreMissingModules=false
 webtest.debug.server.packages=
 webtest.without.test.modules=
 webtest.primary.app.admin=
-webtest.server.sso.only=true
+webtest.server.sso.only=
 
 # Enable/Disable experimental features
 #webtest.experimental.legacy-lineage=false
