--- a/test.properties
+++ b/test.properties
@@ -37,6 +37,7 @@ webtest.ignoreMissingModules=false
 webtest.debug.server.packages=
 webtest.without.test.modules=
 webtest.primary.app.admin=
+webtest.server.remote=
 webtest.server.sso.only=
 
 # Enable/Disable experimental features
