Consolidate and rename trial server property

--- a/test.properties
+++ b/test.properties
@@ -38,7 +38,7 @@ webtest.debug.server.packages=
 webtest.without.test.modules=
 webtest.primary.app.admin=
 webtest.server.remote=
-webtest.server.sso.only=
+webtest.server.trial=
 
 # Enable/Disable experimental features
 #webtest.experimental.legacy-lineage=false
