--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,12 @@ import org.labkey.gradle.util.PomFileHelper
 
 project.group = "org.labkey.test"
 
+project.configurations {
+    aspectj
+}
+
 project.dependencies {
+    aspectj "org.aspectj:aspectjtools:${aspectjVersion}"
     implementation "org.slf4j:slf4j-log4j12:${slf4jLog4j12Version}" // Suppresses unwanted logging from remoteapi and webdriver
     implementation "com.github.lookfirst:sardine:${project.lookfirstSardineVersion}"
     implementation "com.googlecode.json-simple:json-simple:${jsonSimpleVersion}"
@@ -58,13 +63,6 @@ project.dependencies {
 
 BuildUtils.addLabKeyDependency(
         project: project,
-        config: 'uiTestImplementation',
-        depProjectPath: BuildUtils.getRemoteApiProjectPath(gradle),
-        depProjectConfig: 'runtimeElements',
-        depVersion: project.labkeyClientApiVersion)
-
-BuildUtils.addLabKeyDependency(
-        project: project,
         config: 'api',
         depProjectPath: BuildUtils.getRemoteApiProjectPath(gradle),
         depProjectConfig: 'runtimeElements',
@@ -80,6 +78,8 @@ if (project.hasProperty("teamcity"))
     apply plugin: 'org.labkey.teamCity'
 }
 
+// the jar file that contains just the classes from this project, not all other
+// projects with src/test directories
 project.sourceSets {
     main {
         java {
