--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,6 @@
-# Properties used by 'org.labkey.UiTest' Gradle plugin
-# suppress inspection "UnusedProperty"
+buildFromSource=false
+
 aspectjVersion=1.9.6
-# suppress inspection "UnusedProperty"
 reflectionsVersion=0.9.10
 
 lookfirstSardineVersion=5.7
