--- a/test.properties
+++ b/test.properties
@@ -37,6 +37,8 @@ webtest.ignoreMissingModules=false
 webtest.debug.server.packages=
 webtest.without.test.modules=
 webtest.primary.app.admin=
+webtest.server.remote=
+webtest.server.trial=
 
 # Enable/Disable experimental features
 #webtest.experimental.legacy-lineage=false
