--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,6 @@ hamcrestCoreVersion=1.3
 lookfirstSardineVersion=5.7
 jettyRepackagedVersion=9.4.12.v20180830
 seleniumVersion=3.141.59
-#mockserverVersion=5.5.1
+mockserverNettyVersion=5.5.1
 
 labkeySchemasTestVersion=20.7.0
