Prevent line ending changes at checkout for SpectraMax tests' sample data

--- a/.gitattributes
+++ b/.gitattributes
@@ -48,3 +48,4 @@
 
 # LuceneSearchServiceImpl.TikaTestCase depends on exact file sizes. Do not normalize these files on checkout.
 data/fileTypes/* -text
+data/Nab/SpectraMax/* -text
