--- a/distributions/teamcity/build.gradle
+++ b/distributions/teamcity/build.gradle
@@ -2,6 +2,7 @@ import org.labkey.gradle.task.ModuleDistribution
 import org.labkey.gradle.util.BuildUtils
 import org.labkey.gradle.util.GroupNames
 import org.labkey.gradle.plugin.Distribution
+import org.labkey.gradle.plugin.FileModule
 
 apply plugin: 'org.labkey.distribution'
 
@@ -50,7 +51,8 @@ else
     List pathList = []
     project.rootProject.allprojects.each {
         Project otherProject ->
-            if (otherProject != project && otherProject.getPlugins().findPlugin(Distribution.class) == null)
+            if (otherProject != project && otherProject.getPlugins().findPlugin(Distribution.class) == null
+                && FileModule.shouldDoBuild(project, true))
             {
                 project.evaluationDependsOn(otherProject.path)
                 if (otherProject.plugins.hasPlugin('org.labkey.module') || 
