--- a/distributions/teamcity/build.gradle
+++ b/distributions/teamcity/build.gradle
@@ -1,6 +1,7 @@
 import org.labkey.gradle.task.ModuleDistribution
 import org.labkey.gradle.util.BuildUtils
 import org.labkey.gradle.util.GroupNames
+import org.labkey.gradle.util.ModuleFinder
 import org.labkey.gradle.plugin.Distribution
 import org.labkey.gradle.plugin.FileModule
 
@@ -52,7 +53,7 @@ else
     project.rootProject.allprojects.each {
         Project otherProject ->
             if (otherProject != project && otherProject.getPlugins().findPlugin(Distribution.class) == null
-                && FileModule.shouldDoBuild(project, true))
+                && ModuleFinder.isPotentialModule(otherProject) && FileModule.shouldDoBuild(otherProject, true))
             {
                 project.evaluationDependsOn(otherProject.path)
                 if (otherProject.plugins.hasPlugin('org.labkey.module') || 
