--- a/distributions/teamcity/build.gradle
+++ b/distributions/teamcity/build.gradle
@@ -52,8 +52,7 @@ else
     List pathList = []
     project.rootProject.allprojects.each {
         Project otherProject ->
-            if (otherProject != project && otherProject.getPlugins().findPlugin(Distribution.class) == null
-                && ModuleFinder.isPotentialModule(otherProject) && FileModule.shouldDoBuild(otherProject, true))
+            if (otherProject != project && ModuleFinder.isPotentialModule(otherProject) && FileModule.shouldDoBuild(otherProject, false))
             {
                 project.evaluationDependsOn(otherProject.path)
                 if (otherProject.plugins.hasPlugin('org.labkey.module') || 
