--- a/distributions/teamcity/build.gradle
+++ b/distributions/teamcity/build.gradle
@@ -17,6 +17,7 @@ project.task(
         {ModuleDistribution dist ->
             dist.subDirName = "test"
             dist.includeTarGZArchive=true
+            dist.includeEmbeddedArchive=true
             dist.extraFileIdentifier='-test'
             dist.versionPrefix='Test'
         }
