Update embeddedArchive property

--- a/distributions/teamcity/build.gradle
+++ b/distributions/teamcity/build.gradle
@@ -17,7 +17,7 @@ project.task(
         {ModuleDistribution dist ->
             dist.subDirName = "test"
             dist.includeTarGZArchive=true
-            dist.includeEmbeddedArchive=true
+            dist.embeddedArchive="tar.gz"
             dist.extraFileIdentifier='-test'
             dist.versionPrefix='Test'
         }
