Add separate task for creating the embeddedDistribution

--- a/distributions/teamcity/build.gradle
+++ b/distributions/teamcity/build.gradle
@@ -17,11 +17,24 @@ project.task(
         {ModuleDistribution dist ->
             dist.subDirName = "test"
             dist.includeTarGZArchive=true
+            dist.extraFileIdentifier='-test'
+            dist.versionPrefix='Test'
+        }
+)
+
+project.task(
+        "embeddedDistribution",
+        group: GroupNames.DISTRIBUTION,
+        description: "Make a LabKey modules distribution for 'test'",
+        type: ModuleDistribution,
+        {ModuleDistribution dist ->
+            dist.subDirName = "testEmbedded"
             dist.embeddedArchive="tar.gz"
             dist.extraFileIdentifier='-test'
             dist.versionPrefix='Test'
         }
 )
+
 
 if (project.hasProperty('inheritedDistPath'))
 {
