--- a/distributions/teamcity/build.gradle
+++ b/distributions/teamcity/build.gradle
@@ -28,8 +28,8 @@ project.task(
         description: "Make a LabKey modules distribution for 'test'",
         type: ModuleDistribution,
         {ModuleDistribution dist ->
-            dist.subDirName = "testEmbedded"
-            dist.embeddedArchive="tar.gz"
+            dist.subDirName = "test"
+            dist.embeddedArchiveType="tar.gz,zip"
             dist.extraFileIdentifier='-test'
             dist.versionPrefix='Test'
         }
