--- a/distributions/teamcity/build.gradle
+++ b/distributions/teamcity/build.gradle
@@ -60,7 +60,7 @@ if (project.hasProperty('inheritedDistPath'))
     String inheritedDistName = split[split.length - 1]
     tasks.distribution.subDirName = "test/" + inheritedDistName
     tasks.distribution.versionPrefix = "Test_" + inheritedDistName
-    tasks.embeddedDistribution.subdirName = "test/" + inheritedDistName
+    tasks.embeddedDistribution.subDirName = "test/" + inheritedDistName
     tasks.embeddedDistribution.versionPrefix = "Test_" + inheritedDistName
 }
 else
