Automation test for Chromatogram optimization library.

--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,9 @@ project.configurations {
 }
 
 project.dependencies {
+
+    implementation "org.xerial:sqlite-jdbc:3.7.2"
+    implementation("commons-dbcp:commons-dbcp:${commonsDbcpVersion}")
     api("junit:junit:${junitVersion}")
     api("org.seleniumhq.selenium:selenium-api:${seleniumVersion}")
     implementation("commons-io:commons-io:${commonsIoVersion}")
