Code review changes

--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,7 @@ project.configurations {
 
 project.dependencies {
 
-    implementation "org.xerial:sqlite-jdbc:3.7.2"
-    implementation("commons-dbcp:commons-dbcp:${commonsDbcpVersion}")
+    implementation "org.xerial:sqlite-jdbc:3.7.2" // declaring SQLite here to be used in targettedMS test
     api("junit:junit:${junitVersion}")
     api("org.seleniumhq.selenium:selenium-api:${seleniumVersion}")
     implementation("commons-io:commons-io:${commonsIoVersion}")
