Add comments to properties file

--- a/test.credentials.json.template
+++ b/test.credentials.json.template
@@ -36,12 +36,12 @@
       ]
     },
     {
-      "key": "GoogleOOO",
-      "host": "https://www.googleapis.com/auth/calendar.readonly",
-      "logins": [
+      "key": "s3-labkey-test-teamcity",
+      "host": "aws-s3",
+      "apiKeys": [
         {
-          "email": "abcdefgh12345@developer.gserviceaccount.com",
-          "password": "abcdefghijk.p12"
+          "name": "",
+          "token": ""
         }
       ]
     }
