Define debug port and revert accidental change

--- a/test.properties.dist
+++ b/test.properties.dist
@@ -84,7 +84,7 @@ selenium.reuseWebDriver=true
 # Command line only.
 #==============================================================================
 #debugSuspendSelenium=n
-#selenium.debug.port=5005
+selenium.debug.port=5005
 
 
 #==============================================================================
